--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/saraaltayeh/Movies-Library#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.18.0"
+    "express": "^4.18.1"
   }
 }
