--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "movies-library",
   "version": "1.0.0",
   "description": "project to build the server and the database",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "repository": {
     "type": "git",
